# cpp-calculator

./: CMakeLists.txt
.github/workflows/: c-cpp.yml
include/: calculator.h
src/: calculator.cpp  main.cpp
tests/: calculator_tests.cpp
